# Astraeus

./: CMakeLists.txt  README.md
cmake/: Tools.cmake
docs/doxygen/: Doxyfile.in
src/: version.hpp
static_analysis/: clang-format-all.sh  clang-tidy-all.sh
